# quantum_hardware_code

./: LICENSE  README.md  pyproject.toml
data/: 06_rabi_flop_pmt_counts.csv
notebooks/: 00_lecture_notes_plots.ipynb  00_random_plots.ipynb  00_trapping_ions.ipynb  01_ion_traps.ipynb  01_trapping_ions.ipynb  04_atomic_physics.ipynb  05_laser_cooling.ipynb  06_rabi_flop.ipynb  06_rabi_flop_data.ipynb  07_measurements.ipynb  08_spin_dependent_forces.ipynb  09_ms_gate.ipynb  notes.mplstyle
qhlib/: README.md  functions.py  simulation.py
