[tool.poetry]
name = "quantum-hardware-code"
version = "0.1.0"
description = "Code, data, and exercises for the course 'Introduction to Quantum Hardware', University of Padua"
authors = ["Carmelo Mordini <carmelo.mordini@unipd.it>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "qhlib" },
]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
lmfit = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
